Refactr: mejoras en el llamado a las exepciones