@@ -1,54 +1,113 @@
 package com.fitapp.backend.domain.exception;
 
-import java.time.LocalDateTime;
-import java.util.LinkedHashMap;
-import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.List;
-
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import lombok.extern.slf4j.Slf4j;
+import org.slf4j.MDC;
+import org.springframework.http.*;
 import org.springframework.web.bind.MethodArgumentNotValidException;
-import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.context.request.WebRequest;
-import org.springframework.http.HttpHeaders;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
-@ControllerAdvice
+import java.time.Instant;
+import java.util.List;
+
+@RestControllerAdvice
+@Slf4j
 public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
 
-    @ExceptionHandler(UserNotFoundException.class)
-    public ResponseEntity<String> handleUserNotFoundException(UserNotFoundException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                .body("Error: " + ex.getMessage() + " at " + LocalDateTime.now());
+    @ExceptionHandler(SportNotFoundException.class)
+    public ResponseEntity<ErrorResponse> handleSportNotFound(SportNotFoundException ex) {
+        log.warn("SPORT_NOT_FOUND | {}", ex.getMessage());
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(
+            ErrorResponse.builder()
+                .code("SPORT_NOT_FOUND")
+                .message(ex.getMessage())
+                .timestamp(Instant.now())
+                .correlationId(MDC.get("correlationId"))
+                .build()
+        );
     }
 
-    @ExceptionHandler(Exception.class)
-    public ResponseEntity<String> handleGeneralException(Exception ex) {
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body("An unexpected error occurred: " + ex.getMessage() + " at " + LocalDateTime.now());
+    @ExceptionHandler(SportOwnershipException.class)
+    public ResponseEntity<ErrorResponse> handleSportOwnership(SportOwnershipException ex) {
+        log.warn("SPORT_OWNERSHIP_VIOLATION | {}", ex.getMessage());
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(
+            ErrorResponse.builder()
+                .code("SPORT_FORBIDDEN")
+                .message(ex.getMessage())
+                .timestamp(Instant.now())
+                .correlationId(MDC.get("correlationId"))
+                .build()
+        );
+    }
+
+    @ExceptionHandler(PredefinedSportException.class)
+    public ResponseEntity<ErrorResponse> handlePredefinedSport(PredefinedSportException ex) {
+        log.warn("PREDEFINED_SPORT_VIOLATION | {}", ex.getMessage());
+        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(
+            ErrorResponse.builder()
+                .code("SPORT_PREDEFINED")
+                .message(ex.getMessage())
+                .timestamp(Instant.now())
+                .correlationId(MDC.get("correlationId"))
+                .build()
+        );
+    }
+
+    @ExceptionHandler(UserNotFoundException.class)
+    public ResponseEntity<ErrorResponse> handleUserNotFound(UserNotFoundException ex) {
+        log.warn("USER_NOT_FOUND | {}", ex.getMessage());
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(
+            ErrorResponse.builder()
+                .code("USER_NOT_FOUND")
+                .message(ex.getMessage())
+                .timestamp(Instant.now())
+                .correlationId(MDC.get("correlationId"))
+                .build()
+        );
     }
 
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(
             MethodArgumentNotValidException ex,
             HttpHeaders headers,
-            org.springframework.http.HttpStatusCode status,
+            HttpStatusCode status,
             WebRequest request) {
 
-        Map<String, Object> response = new LinkedHashMap<>();
-        response.put("timestamp", LocalDateTime.now());
-        response.put("status", status.value());
+        List<ErrorResponse.FieldError> fieldErrors = ex.getBindingResult()
+            .getFieldErrors()
+            .stream()
+            .map(e -> ErrorResponse.FieldError.builder()
+                .field(e.getField())
+                .message(e.getDefaultMessage())
+                .build())
+            .toList();
 
-        List<String> errors = ex.getBindingResult()
-                .getFieldErrors()
-                .stream()
-                .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .collect(Collectors.toList());
+        log.warn("VALIDATION_ERROR | fields={}", fieldErrors.stream()
+            .map(ErrorResponse.FieldError::getField).toList());
 
-        response.put("errors", errors);
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(
+            ErrorResponse.builder()
+                .code("VALIDATION_ERROR")
+                .message("One or more fields are invalid")
+                .timestamp(Instant.now())
+                .correlationId(MDC.get("correlationId"))
+                .fieldErrors(fieldErrors)
+                .build()
+        );
+    }
 
-        return new ResponseEntity<>(response, headers, status);
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ErrorResponse> handleGeneral(Exception ex) {
+        log.error("UNHANDLED_EXCEPTION | {}", ex.getMessage(), ex);
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(
+            ErrorResponse.builder()
+                .code("INTERNAL_ERROR")
+                .message("An unexpected error occurred")
+                .timestamp(Instant.now())
+                .correlationId(MDC.get("correlationId"))
+                .build()
+        );
     }
 }
